[package]
name = "ccsds-rs"
description = "Rust implementations of various CCSDS standards"
homepage = "https://github.com/DrakBoul/ccsds-rs"
github = "https://github.com/DrakBoul/ccsds-rs"
readme = "README.md"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]

[dev-dependencies]
rstest = "0.25.0"

[features]
default = ["spp"]
spp = []


