[package]
name = "ccsds-rs"
description = "Rust implementations of various CCSDS standards"
homepage = "https://github.com/DrakBoul/ccsds-rs"
repository = "https://github.com/DrakBoul/ccsds-rs"
readme = "README.md"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"

[features]
default = ["spp"]
spp = []

